sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: ')' expected but '}' found.
	}
        ^AlgBubbleSort1:14: error: Unmatched closing brace '}' ignored here
}
^